removed noisy logging and stack traces